--- a/OPE-app2.0/backend/config/config.json
+++ b/OPE-app2.0/backend/config/config.json
@@ -2,5 +2,5 @@
     "host": "localhost",
     "user": "root",
     "database": "savedeval",
-    "password": "Mayaisanerd6161!"
+    "password": "iggykhulets23"
 }
