--- a/OPE-app2.0/backend/package.json
+++ b/OPE-app2.0/backend/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@angular/platform-browser-dynamic": "^16.0.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
