--- a/OPE-app2.0/backend/package.json
+++ b/OPE-app2.0/backend/package.json
@@ -21,7 +21,8 @@
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.0",
     "mysql2": "^3.2.4",
-    "puppeteer": "^20.4.0"
+    "puppeteer": "^20.4.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
