--- a/OPE-app2.0/frontend/package.json
+++ b/OPE-app2.0/frontend/package.json
@@ -24,6 +24,7 @@
     "highcharts": "^11.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "typeface-montserrat": "^1.1.13",
     "zone.js": "~0.12.0"
   },
   "devDependencies": {
