--- a/OPE-app2.0/frontend/package.json
+++ b/OPE-app2.0/frontend/package.json
@@ -21,7 +21,13 @@
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
     "angular-highcharts": "^15.0.1",
+    "dom-to-image": "^2.6.0",
     "highcharts": "^11.0.1",
+    "html-to-pdfmake": "^2.4.20",
+    "html2pdf.js": "^0.10.1",
+    "jspdf": "^2.5.1",
+    "moment": "^2.29.4",
+    "pdfmake": "^0.2.7",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "typeface-montserrat": "^1.1.13",
@@ -31,7 +37,9 @@
     "@angular-devkit/build-angular": "^15.2.6",
     "@angular/cli": "~15.2.6",
     "@angular/compiler-cli": "^15.2.0",
+    "@types/dom-to-image": "^2.6.4",
     "@types/jasmine": "~4.3.0",
+    "@types/pdfmake": "^0.2.2",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
