added route to amazon scraper

--- a/OPE-app2.0/backend/config/config.json
+++ b/OPE-app2.0/backend/config/config.json
@@ -1,6 +1,6 @@
 {
     "host": "localhost",
-    "user": "martin",
+    "user": "root",
     "database": "savedeval",
-    "password": "1"
+    "password": "iggykhulets23"
 }
