--- a/OPE-app2.0/frontend/package.json
+++ b/OPE-app2.0/frontend/package.json
@@ -24,6 +24,7 @@
     "dom-to-image": "^2.6.0",
     "highcharts": "^11.0.1",
     "html-to-pdfmake": "^2.4.20",
+    "html2canvas": "^1.4.1",
     "html2pdf.js": "^0.10.1",
     "jspdf": "^2.5.1",
     "moment": "^2.29.4",
