stop tracking .png files from backend

--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@ OPE-app2.0/backend/package.json
 OPE-app2.0/backend/config/config.json
 OPE-app2.0/frontend/.angular/*
 
-OPE-app2.0\backend\*.png
+OPE-app2.0/backend/*.png
 
 # Ignore build output
 /dist
