stopped tracking reviews.json

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ OPE-app2.0/backend/config/config.json
 OPE-app2.0/frontend/.angular/*
 
 OPE-app2.0/backend/*.png
+OPE-app2.0/backend/reviews.json
 
 # Ignore build output
 /dist
