--- a/OPE-app2.0/frontend/angular.json
+++ b/OPE-app2.0/frontend/angular.json
@@ -26,9 +26,11 @@
             ],
             "styles": [
               "@angular/material/prebuilt-themes/purple-green.css",
+              "node_modules/@fortawesome/fontawesome-free/css/all.min.css",
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [ "node_modules/@fortawesome/fontawesome-free/js/all.min.js"
+          ]
           },
           "configurations": {
             "production": {
