--- a/OPE-app2.0/frontend/angular.json
+++ b/OPE-app2.0/frontend/angular.json
@@ -27,6 +27,7 @@
             "styles": [
               "@angular/material/prebuilt-themes/purple-green.css",
               "node_modules/@fortawesome/fontawesome-free/css/all.min.css",
+              "node_modules/boxicons/css/boxicons.min.css",
               "src/styles.css"
             ],
             "scripts": [ "node_modules/@fortawesome/fontawesome-free/js/all.min.js"
