--- a/OPE-app2.0/frontend/package.json
+++ b/OPE-app2.0/frontend/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^15.2.0",
     "@fortawesome/fontawesome-free": "^6.4.0",
     "angular-highcharts": "^15.0.1",
+    "boxicons": "^2.1.4",
     "dom-to-image": "^2.6.0",
     "highcharts": "^11.0.1",
     "highcharts-angular": "^3.1.2",
