fixed otp transmission via passing of NavigationExtras instead of SharingService

--- a/OPE-app2.0/backend/config/config.json
+++ b/OPE-app2.0/backend/config/config.json
@@ -1,6 +1,6 @@
 {
     "host": "localhost",
-    "user": "root",
+    "user": "martin",
     "database": "savedeval",
-    "password": "Mayaisanerd6161!"
+    "password": "1234"
 }
